@startuml
'https://plantuml.com/class-diagram

class Inventory {
    + main()
    + start()
}

class InventoryController {
    - Add new items to list
    - Remove items from list
    - Edit items from list
    - Sort items
    - Save/Load Files

    + initialize()
    + addItem()
    + addText()
    + removeItem()
    + editItem()
    + saveList()
    + loadList()
    + searchSerial()
    + searchName()
}

class InventoryControllerTest {
    - Test functions from controller class

    + addItemName()
    + addItemSerial()
    + addItemValue()
}


class Item {
    - Group up item properties
    - Get values from selected item

    + getValueProperty()
    + getSerialProperty()
    + getNameProperty()

}



javafx.Application  <|-- Inventory
Inventory - InventoryController
InventoryController -- Item
InventoryController -- InventoryControllerTest
@enduml